--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -23,6 +23,9 @@ a {
     text-decoration: unset;
   }
 }
+ul {
+  list-style: none;
+}
 
 // текст
 html {
@@ -45,11 +48,11 @@ h3 {
   font-size: 1.5rem;
 }
 .big-text {
-  font-size: 1.1rem;
+  font-size: 1.1rem !important;
 }
 .small-text {
-  font-size: 0.8rem;
+  font-size: 0.8rem !important;
 }
 small {
-  font-size: 0.6rem;
+  font-size: 0.6rem !important;
 }
