--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -11,6 +11,10 @@ $veryLightGray: #F2F2F2;
   src: url("~assets/fonts/ubuntu/Ubuntu-R.ttf") format("truetype");
 }
 @font-face {
+  font-family: "ubuntuLight";
+  src: url("~assets/fonts/ubuntu/Ubuntu-L.ttf") format("truetype");
+}
+@font-face {
   font-family: "ubuntuItalic";
   src: url("~assets/fonts/ubuntu/Ubuntu-RI.ttf") format("truetype");
 }
