--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,6 +5,14 @@ $lightGray: #EAE2E2;
 $lemon: #F8F3E1;
 $veryLightGray: #F2F2F2;
 
+// Hover цвета
+$darkGrayHover: #626161;
+$grayHover: #A59F9F;
+$lightGrayHover: #F6F1F1;
+$lemonHover: #F1EDE0;
+$veryLightGray: #E8E7E7;
+$whiteHover: #F8F8F8;
+
 // fonts
 @font-face {
   font-family: "ubuntu";
